Добавил секцию сервисы

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -290,12 +290,11 @@ body {
     text-align: center;
     width: 20%;
     height: 270px;
-    border-left: 1px solid var(--text-white);
-    border-right: 1px solid var(--text-white);
+    border-left: 1px solid #b5eae0;
 }
-.funnum__item:not(:first-child) {
-    border-left: none;
-    border-right: 1px solid var(--text-white);  
+.funnum__item:last-child {
+    border-left: 1px solid #b5eae0;
+    border-right: 1px solid #b5eae0;  
 }
 .funnum__num {
     font-size: 72px;
@@ -307,4 +306,44 @@ body {
     font-weight: 400;
     text-transform: uppercase;
     color: var(--text-white);
+}
+
+/* Services */
+.services {
+    display: flex;
+    position: relative;
+    margin-bottom: 50px;
+}
+.services__item {
+    flex: 1 1 0;
+    position: relative;
+    padding: 0 40px 40px 90px;
+}
+.services__icon {
+    position: absolute;
+    top: 0;
+    left: 30px;
+}
+.services__title {
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: var(--text-gray);
+}
+.services__text {
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    line-height: 1.6;
+    color: var(--text-light-gray);
+}
+.services.line::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 9999;
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: #e5e5e5;
 }
